# CE-PiicoDev-CAP1203-MicroPython-Module

./: PiicoDev_CAP1203.py  README.md  main.py  pyproject.toml
.github/workflows/: main.yml
example/: microbit-keyboard.py  rpi-pico-colour-mixer-ws2812b.py
min/: PiicoDev_CAP1203.py  README.md
